# heise-2020-07-cpp-tricks-enums

./: CMakeLists.txt  Readme.md
.github/workflows/: ci.yml
01-whyScopedEnums0/: main.cpp
02-whyScopedEnums1/: main.cpp
03-getTheUnderlyingType0/: main.cpp
04-getUnderlyingValue0/: main.cpp
05-classEnumInit0/: main.cpp
06-scopedEnumAsBitmask0/: main.cpp
07-scopedEnumAsBitmask1/: main.cpp
08-scopedEnumAsBitmask2/: main.cpp
10-scopedEnumAsBitmask3/: main.cpp
11-scopedEnumAsBitmask4/: main.cpp
12-scopedEnumAsBitmask5/: main.cpp
13-strongBool0/: CMakeLists.txt  main.cpp
14-strongBool2/: main.cpp
15-usingEnum0/: main.cpp
16-usingEnum1/: main.cpp
